--- a/solution/Pomodoro/PomodoroDAL/PomodoroDAL.csproj
+++ b/solution/Pomodoro/PomodoroDAL/PomodoroDAL.csproj
@@ -50,19 +50,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Comment.cs" />
-    <Compile Include="Entry.cs" />
+    <Compile Include="Entities\Comment.cs" />
+    <Compile Include="Entities\Entry.cs" />
     <Compile Include="PomodoroContext.cs" />
-    <Compile Include="PomodoroTag.cs" />
+    <Compile Include="Entities\PomodoroTag.cs" />
+    <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="ProjectTag.cs" />
+    <Compile Include="Entities\ProjectTag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tag.cs" />
+    <Compile Include="Entities\Tag.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
