--- a/solution/Pomodoro/PomodoroGUI/App.config
+++ b/solution/Pomodoro/PomodoroGUI/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IPomodoroService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/PomodoroService/Service1/"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPomodoroService"
+                contract="PomodoroServiceReference.IPomodoroService" name="BasicHttpBinding_IPomodoroService" />
+        </client>
+    </system.serviceModel>
 </configuration>
