Nagy nehezen lett logolás Close #6

--- a/solution/Pomodoro/PomodoroGUI/App.config
+++ b/solution/Pomodoro/PomodoroGUI/App.config
@@ -1,18 +1,44 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>  
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IPomodoroService" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/PomodoroService/Service1/"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPomodoroService"
-                contract="PomodoroServiceReference.IPomodoroService" name="BasicHttpBinding_IPomodoroService" />
-        </client>
-    </system.serviceModel>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IPomodoroService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/PomodoroService/Service1/"
+          binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPomodoroService"
+          contract="PomodoroServiceReference.IPomodoroService" name="BasicHttpBinding_IPomodoroService" />
+    </client>
+  </system.serviceModel>
+  
+  
+<system.diagnostics>
+  <trace autoflush="true"/>
+    
+    <sources>
+      
+      <source name="Pomodoro" switchName="sourceSwitch" switchType="System.Diagnostics.SourceSwitch">
+        
+        <listeners>
+          <clear/>
+          <add name="console" type="System.Diagnostics.ConsoleTraceListener" traceOutputOptions="DateTime, ProcessId, ThreadId">
+            <!--<filter type="System.Diagnostics.EventTypeFilter"
+              initializeData="Warning"/>-->
+          </add>
+          <add name="logfile" type="System.Diagnostics.TextWriterTraceListener" initializeData="pomodoro.log" traceOutputOptions="DateTime, ProcessId, ThreadId"/>
+          <remove name="Default"/>
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="sourceSwitch" value="All"/>
+    </switches>
+  </system.diagnostics>
+  
+  
 </configuration>
