--- a/solution/Pomodoro/PomodoroGUI/PomodoroGUI.csproj
+++ b/solution/Pomodoro/PomodoroGUI/PomodoroGUI.csproj
@@ -196,7 +196,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -218,6 +220,12 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Pomodoro\Pomodoro.csproj">
+      <Project>{50c0b394-5630-4c71-a132-3b3abdd19480}</Project>
+      <Name>Pomodoro</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
