--- a/solution/Pomodoro/Pomodoro/Pomodoro.csproj
+++ b/solution/Pomodoro/Pomodoro/Pomodoro.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
