Lettek unit testek és ennek megfelelően módosult vagy új metódusok. close #13

--- a/solution/Pomodoro/PomodoroDAL/PomodoroDAL.csproj
+++ b/solution/Pomodoro/PomodoroDAL/PomodoroDAL.csproj
@@ -65,7 +65,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Pomodoro\Pomodoro.csproj">
+      <Project>{50c0b394-5630-4c71-a132-3b3abdd19480}</Project>
+      <Name>Pomodoro</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
