--- a/solution/Pomodoro/PomodoroDAL/App.config
+++ b/solution/Pomodoro/PomodoroDAL/App.config
@@ -17,4 +17,25 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
+  <system.diagnostics>
+    <trace autoflush="true"/>
+    <sources>
+      <source name="Pomodoro" switchName="sourceSwitch" switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <clear/>
+          <add name="console" type="System.Diagnostics.ConsoleTraceListener" traceOutputOptions="DateTime, ProcessId, ThreadId">
+            <!--<filter type="System.Diagnostics.EventTypeFilter"
+              initializeData="Warning"/>-->
+          </add>
+          <add name="logfile" type="System.Diagnostics.TextWriterTraceListener" initializeData="PomodoroDAL.log" traceOutputOptions="DateTime, ProcessId, ThreadId"/>
+          <remove name="Default"/>
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="sourceSwitch" value="All"/>
+    </switches>
+  </system.diagnostics>
+  
 </configuration>
